fixing video css on mobile (samsung)

--- a/samsungxbmw/css/style.css
+++ b/samsungxbmw/css/style.css
@@ -155,6 +155,10 @@ body{
     max-width: 100%;
 }
 
+.hero-image-2{
+    max-width: 100%;
+}
+
 .image-container-grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
